fix: 🐛 minor alignment changes for grid

--- a/public/styles.css
+++ b/public/styles.css
@@ -4,11 +4,12 @@
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  grid-gap: 0.25rem;
+  grid-gap: 2px;
 }
 @media only screen and (max-width: 768px) {
   .gallery {
     grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
+    grid-gap: 1px;
   }
 }
 .gallery .thumb source,
